--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5209,14 +5209,14 @@ function searchBtnCheck(){
                         click on a circle around it to show its animation</p>
                     <div class="anima_show">
                         <div class="anima_img">
-                            <div>1<span><a href="#c">애니메이션 보기1 &#8641</a></span></div>
-                            <div>2<span><a href="#c">애니메이션 보기2 &#8641</a></span></div>
-                            <div>3<span><a href="#c">애니메이션 보기3 &#8641</a></span></div>
-                            <div>4<span><a href="#c">애니메이션 보기4 &#8641</a></span></div>
-                            <div>5<span><a href="#c">애니메이션 보기5 &#8641</a></span></div>
-                            <div>6<span><a href="#c">애니메이션 보기6 &#8641</a></span></div>
-                            <div>7<span><a href="#c">애니메이션 보기7 &#8641</a></span></div>
-                            <div>8<span><a href="#c">애니메이션 보기8 &#8641</a></span></div>
+                            <div><span><a href="https://codepen.io/heoar/pen/wveLWKx" target="_blank">Animation view &#8641</a></span></div>
+                            <div><span><a href="https://codepen.io/heoar/pen/abwbGxo" target="_blank">Animation view &#8641</a></span></div>
+                            <div><span><a href="https://codepen.io/heoar/pen/abwbGyM" target="_blank">Animation view &#8641</a></span></div>
+                            <div><span><a href="https://codepen.io/heoar/pen/ZEyQjog" target="_blank">Animation view &#8641</a></span></div>
+                            <div><span><a href="#c" target="_blank">Animation view &#8641</a></span></div>
+                            <div><span><a href="#c" target="_blank">Animation view &#8641</a></span></div>
+                            <div><span><a href="#c" target="_blank">Animation view &#8641</a></span></div>
+                            <div><span><a href="#c" target="_blank">Animation view &#8641</a></span></div>
                         </div>
                         <div class="show_bt">
                             <div class="animabt1 left active"></div>
