--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
                     <!-- //box -->
 
                     <!-- box -->
-                    <section class="color-shape reference">
+                    <!-- <section class="color-shape reference">
                         <a href="site/portfolio.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
@@ -544,7 +544,7 @@
                                 </div>
                             </div>
                         </a>
-                    </section>
+                    </section> -->
                     <!-- //box -->
 
                     <!-- box -->
