--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5209,10 +5209,10 @@ function searchBtnCheck(){
                         click on a circle around it to show its animation</p>
                     <div class="anima_show">
                         <div class="anima_img">
-                            <div><span><a href="https://codepen.io/heoar/pen/wveLWKx" target="_blank">Animation view &#8641</a></span></div>
-                            <div><span><a href="https://codepen.io/heoar/pen/abwbGxo" target="_blank">Animation view &#8641</a></span></div>
-                            <div><span><a href="https://codepen.io/heoar/pen/abwbGyM" target="_blank">Animation view &#8641</a></span></div>
-                            <div><span><a href="https://codepen.io/heoar/pen/ZEyQjog" target="_blank">Animation view &#8641</a></span></div>
+                            <div><span><a href="https://codepen.io/heoar/pen/wveLWKx" target="_blank">Summer Animation &#8641</a></span></div>
+                            <div><span><a href="https://codepen.io/heoar/pen/abwbGxo" target="_blank">Squeare Animation &#8641</a></span></div>
+                            <div><span><a href="https://codepen.io/heoar/pen/abwbGyM" target="_blank">Bar Animation &#8641</a></span></div>
+                            <div><span><a href="https://codepen.io/heoar/pen/ZEyQjog" target="_blank">Wave Animation &#8641</a></span></div>
                             <div><span><a href="#c" target="_blank">Animation view &#8641</a></span></div>
                             <div><span><a href="#c" target="_blank">Animation view &#8641</a></span></div>
                             <div><span><a href="#c" target="_blank">Animation view &#8641</a></span></div>
