--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -163,7 +163,7 @@
         <div class="container">
             <div class="personalitys">
                 <div class="pers_box"
-                    data-4000 = "position: relative; top: 0; left: 0; right: 0;  width: 1400px; margin: 0 auto; opacity:1;"
+                    data-4300 = "position: relative; top: 0; left: 0; right: 0;  width: 1400px; margin: 0 auto; opacity:0;"
                     data-5719 = "position: fixed; top: 10%; left: 0; right: 0;  width: 1400px; margin: 0 auto; opacity:1;"
                     data-8000 = "position: fixed; top: 10%; left: 0; right: 0;  width: 1400px; margin: 0 auto; opacity:1;"
                     data-8500 = "position: fixed; top: 10%; left: 0; right: 0;  width: 1400px; margin: 0 auto; opacity:1;"
@@ -5171,8 +5171,8 @@ function searchBtnCheck(){
             </div>
             <div class="effect_frame">
                 <img class="bgst" src="assets/img/bgst.png" alt="별자리"
-                    data-18000 = "height: 0px; object-fit: cover;"
-                    data-21000 = "height: 3000px; object-fit: cover;"
+                    data-17500 = "height: 0px; object-fit: cover;"
+                    data-20000 = "height: 3000px; object-fit: cover;"
                 >
                 <div class="frame left">
                     <iframe src="../refer-effect/mouseEffect/index.html" frameborder="0"></iframe>
@@ -5213,7 +5213,7 @@ function searchBtnCheck(){
                             <div><span><a href="https://codepen.io/heoar/pen/abwbGxo" target="_blank">Squeare Animation &#8641</a></span></div>
                             <div><span><a href="https://codepen.io/heoar/pen/abwbGyM" target="_blank">Bar Animation &#8641</a></span></div>
                             <div><span><a href="https://codepen.io/heoar/pen/ZEyQjog" target="_blank">Wave Animation &#8641</a></span></div>
-                            <div><span><a href="#c" target="_blank">Animation view &#8641</a></span></div>
+                            <div><span><a href="https://codepen.io/heoar/pen/xxrVgPb" target="_blank">Modal Animation &#8641</a></span></div>
                             <div><span><a href="#c" target="_blank">Animation view &#8641</a></span></div>
                             <div><span><a href="#c" target="_blank">Animation view &#8641</a></span></div>
                             <div><span><a href="#c" target="_blank">Animation view &#8641</a></span></div>
