--- a/index.html
+++ b/index.html
@@ -641,11 +641,32 @@
                                     <span class="overlay-text-thumb1-donut">리액트</span>
                                     <span class="overlay-text-thumb2-donut">React</span>
                                 </div>
-                                <img src="assets/ico/premium-icon-windmill-4499074.png" alt="portfolio">
+                                <img src="assets/ico/irrigation.png" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>React</h5>
                                     <p>리액트</p>
                                     <span>React</span>
+                                </div>
+                            </div>
+                        </a>
+                    </section>
+                    <!-- //box -->
+
+                     <!-- box -->
+                     <section class="color-shape figma reference">
+                        <a href="https://www.figma.com/proto/xhvDstkzQxFTs6opvj1ZQE/Reference-Book?page-id=498%3A119&node-id=498%3A135&scaling=min-zoom" target="_blank">
+                            <div class="image-wrap">
+                                <div class="hover-wrap">
+                                    <span class="overlay-img-donut">Vue</span>
+                                    <span class="overlay-text-thumb-donut">뷰</span>
+                                    <span class="overlay-text-thumb1-donut">뷰</span>
+                                    <span class="overlay-text-thumb2-donut">Vue</span>
+                                </div>
+                                <img src="assets/ico/premium-icon-well-4499083.png" alt="portfolio">
+                                <div class="img-text donutImg">
+                                    <h5>Vue</h5>
+                                    <p>뷰</p>
+                                    <span>Vue</span>
                                 </div>
                             </div>
                         </a>
