--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -181,7 +181,15 @@
                     </div>
                     <div class="pers_img">
                         <div class="img_box">
-                            <img src="assets/img/pers_me.png" alt="이미지">
+                            <div class="imge"
+                                data-6100 = "transform: rotateY(0deg); display: block;"
+                                data-7200 = "transform: rotateY(90deg); display: block;"
+                                data-7300 = "transform: rotateY(90deg); display: none;"
+                            ></div>
+                            <div class="imges"
+                                data-7300 = "transform: rotateY(90deg); display: block;"
+                                data-8000 = "transform: rotateY(0deg); display: block;"></div>
+                            <!-- <img src="assets/img/pers_me.png" alt="이미지"> -->
                         </div>
                     </div>
                     <div class="txt right">
@@ -1390,14 +1398,17 @@ nav li a:hover {
             <div class="site_view1">
                 <img src="assets/img/project01.jpg" alt="프로젝트1">
             </div>
-            <div class="site_box left">
+            <div class="site_box left"
+                data-12000 = "transform: translate(0%, 10%);"
+                data-13000 = "transform: translate(0%, -30%);"
+            >
                 <h2>NAVER<br>CLOVA SITE</h2>
                 <p>기존에 존재하는 사이트를 참고하여 레이아웃 구성을 어떻게
                     구성하고 기본 틀을<br>잡을지를 익히기 위해 연습한 제 첫번째
                     작업물 네이버 클로바사이트입니다.
                 </p>
-                <button class="site_bt1"><a href="https://heoar.github.io/dothome21/site/testType03.html" target="_blank">SITE <span>View &#8641</span></a></button>
-                <button class="code_bt1"><a>CODE <span>View &#8641</span></a></button>
+                <button class="site_bt1"><a href="https://heoar.github.io/dothome21/site/testType03.html" target="_blank">SITE VIEW <span>&#8641</span></a></button>
+                <button class="code_bt1"><a>• CODE <span>View &#8641</span></a></button>
             </div>
         </div>
 
@@ -3508,14 +3519,16 @@ body.modal_on {overflow: hidden;}
     tabMenu.find("ul > li > a").click(tabList).focus(tabList);
 </code></pre>
                         </div>
-
                     </div>
                 </div>
             </div>
             <div class="site_view2">
                 <img src="assets/img/project02.jpg" alt="프로젝트2">
             </div>
-            <div class="site_box right">
+            <div class="site_box right"
+                data-13500 = "transform: translate(0%, 10%);"
+                data-14500 = "transform: translate(0%, -30%);"
+            >
                 <h2>WEB STANDARDS<br>MEGABOX</h2>
                 <p>메뉴,슬라이드 등의 기능이 구현된 메가박스 사이트입니다<br>
                     사용자 디바이스 환경에 따라 모바일까지 호환될 수 있도록<br>
@@ -5149,15 +5162,18 @@ function searchBtnCheck(){
             <div class="site_view3">
                 <img src="assets/img/project03.jpg" alt="프로젝트3">
             </div>
-            <div class="site_box left">
+            <div class="site_box left"
+                data-15000 = "transform: translate(0%, 10%);"
+                data-16000 = "transform: translate(0%, -30%);"
+            >
                 <h2>team project</h2>
                 <p>각 팀별로 주제를 정하여 페이지를 구상하고 PHP를 이용한<br>
                     로그인과 게시판 등 각 주제에 맞게 역할을 나누어 홈페이지<br>
                     완성을 목표로 진행한 정보처리기사 시험 커뮤니티 사이트<br>
                     ‘정신머리’입니다.
                 </p>
-                <button class="site_bt3"><a href="http://bhar.dothome.co.kr/project/pages/index.php" target="_blank">SITE <span>View &#8641</span></a></button>
-                <button class="code_bt3"><a>CODE <span>View &#8641</span></a></button>
+                <button class="site_bt3"><a href="http://bhar.dothome.co.kr/project/pages/index.php" target="_blank">SITE VIEW <span>&#8641</span></a></button>
+                <button class="code_bt3"><a>• CODE <span>View &#8641</span></a></button>
             </div>
         </div>
     </article>
@@ -5171,8 +5187,8 @@ function searchBtnCheck(){
             </div>
             <div class="effect_frame">
                 <img class="bgst" src="assets/img/bgst.png" alt="별자리"
-                    data-17500 = "height: 0px; object-fit: cover;"
-                    data-20000 = "height: 3000px; object-fit: cover;"
+                    data-17900 = "height: 0px; object-fit: cover;"
+                    data-21500 = "height: 3000px; object-fit: cover;"
                 >
                 <div class="frame left">
                     <iframe src="../refer-effect/mouseEffect/index.html" frameborder="0"></iframe>
