--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5187,8 +5187,8 @@ function searchBtnCheck(){
             </div>
             <div class="effect_frame">
                 <img class="bgst" src="assets/img/bgst.png" alt="별자리"
-                    data-17900 = "height: 0px; object-fit: cover;"
-                    data-21500 = "height: 3000px; object-fit: cover;"
+                    data-18150 = "height: 0px; object-fit: cover;"
+                    data-21800 = "height: 3000px; object-fit: cover;"
                 >
                 <div class="frame left">
                     <iframe src="../refer-effect/mouseEffect/index.html" frameborder="0"></iframe>
@@ -5230,8 +5230,8 @@ function searchBtnCheck(){
                             <div><span><a href="https://codepen.io/heoar/pen/abwbGyM" target="_blank">Bar Animation &#8641</a></span></div>
                             <div><span><a href="https://codepen.io/heoar/pen/ZEyQjog" target="_blank">Wave Animation &#8641</a></span></div>
                             <div><span><a href="https://codepen.io/heoar/pen/xxrVgPb" target="_blank">Modal Animation &#8641</a></span></div>
-                            <div><span><a href="#c" target="_blank">Animation view &#8641</a></span></div>
-                            <div><span><a href="#c" target="_blank">Animation view &#8641</a></span></div>
+                            <div><span><a href="https://codepen.io/heoar/pen/eYEwLEQ" target="_blank">Clark Animation &#8641</a></span></div>
+                            <div><span><a href="https://codepen.io/heoar/pen/MWvMqrP" target="_blank">Button Animation &#8641</a></span></div>
                             <div><span><a href="#c" target="_blank">Animation view &#8641</a></span></div>
                         </div>
                         <div class="show_bt">
