--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5243,7 +5243,7 @@ function searchBtnCheck(){
                             <div><span><a href="https://codepen.io/heoar/pen/xxrVgPb" target="_blank">Modal Animation &#8641</a></span></div>
                             <div><span><a href="https://codepen.io/heoar/pen/eYEwLEQ" target="_blank">Clark Animation &#8641</a></span></div>
                             <div><span><a href="https://codepen.io/heoar/pen/MWvMqrP" target="_blank">Button Animation &#8641</a></span></div>
-                            <div><span><a href="#c" target="_blank">Animation view &#8641</a></span></div>
+                            <div><span><a href="https://codepen.io/heoar/pen/JjrPxgR" target="_blank">Dog Animation &#8641</a></span></div>
                         </div>
                         <div class="show_bt">
                             <div class="animabt1 left active"></div>
