--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -20,6 +20,15 @@
 <body  data-start = "height: 1000px;"
        data-end = "height: 0;">
 
+    <div class="loadings">
+        <div class="loading_box">
+            <div class="ld_img">
+                <img src="assets/img/ld_gg.png" alt="로딩이미지">
+            </div>
+            <div class="ld_text">100%</div>
+        </div>
+    </div>
+
     <div class="scroll">0</div>
     <div class="cursor"><span></span></div>
 
@@ -5316,6 +5325,7 @@ function searchBtnCheck(){
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/skrollr/0.6.30/skrollr.min.js"></script>
     <script src="assets/js/highlight.min.js"></script>
     <script src="assets/js/custom.js"></script>
@@ -5355,6 +5365,9 @@ function searchBtnCheck(){
                     $("#career_img").removeClass().addClass("active3");
             }
         };
+
+
+
     </script>
 </body>
 </html>
