--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -234,7 +234,7 @@
                 <div class="skill_js">
                     <img src="assets/img/sk01.png" alt="이미지">
                     <h3>Js/jQuery</h3>
-                    <p>SQL/PHP 초급</p>
+                    <p>기초 메뉴/버튼 구현</p>
                 </div>
                 <div class="skill_html">
                     <img src="assets/img/sk02.png" alt="이미지">
@@ -3552,7 +3552,7 @@ body.modal_on {overflow: hidden;}
                 <h2>WEB STANDARDS<br>MEGABOX</h2>
                 <p>메뉴,슬라이드 등의 기능이 구현된 메가박스 사이트입니다<br>
                     사용자 디바이스 환경에 따라 모바일까지 호환될 수 있도록<br>
-                    레이아웃 재구성 및 웹표준을 준수한 반응형 홈페이지입니다.
+                    레이아웃 재구성 및 웹표준을 준수한 홈페이지입니다.
                 </p>
                 <button class="site_bt2"><a href="https://heoar.github.io/dothome21/mega/index.html" target="_blank">SITE View</a></button>
                 <button class="code_bt2"><a>CODE View</a></button>
