--- a/refer-effect/sliderEffect/jquerySE04.html
+++ b/refer-effect/sliderEffect/jquerySE04.html
@@ -280,7 +280,7 @@
         setInterval(function(){
             sliderInner2.animate({ top: -sliderHeight2 },600, "easeOutExpo", function(){
                 $(".slider2:first-child").appendTo(sliderInner2);
-                sliderInner2.css("Top","");
+                sliderInner2.css("Top","sliderPostion");
             })
         }, 3000);
 
